# Sentiment_analysis

./: .gitignore  README.md  pyproject.toml  sentiment-analysis-c1s1.ipynb  sentiment_analysis_assignment_solutions.ipynb  sentiment_analysis_c1s1 (2).ipynb  sentiment_analysis_c1s1.ipynb  sentiment_analysis_homework_solutions.ipynb
config/: README.md
dataset/: README.md
dataset/raw/: twitter_samples.json  twitter_samples.pkl
models/: frequency_dict.json  processed_data.pkl  twitter_sentiment_lr.pkl
src/: __init__.py
src/data/: __init__.py  data_loader.py  preprocessing.py
src/evaluation/: __init__.py  evaluator.py
src/models/: __init__.py  base.py  logistic_regression.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  features.py
ui/: README.md  main.py  sentiment_analysis_logistic_weights.npy  vocab.npy
