[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentiment-analysis"
version = "0.1.0"
description = "A hands-on Sentiment Analysis workshop project"
authors = [
    {name = "Duongvu05", email = ""},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
    "transformers",
    "datasets",
    "matplotlib",
    "seaborn",
    "jupyter",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]