[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentiment-analysis"
version = "0.1.0"
description = "A hands-on Sentiment Analysis workshop project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyter",
    "transformers",
    "torch",
    "datasets"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true